# planfile

./: .gitignore  .gitlab-ci.yml  .vallmignore  CHANGELOG.md  Dockerfile  ENHANCEMENT_ANALYSIS.md  EXAMPLES_MOVE_SUMMARY.md  FILE_ANALYSIS_SYSTEM.md  IMPLEMENTATION_SUMMARY.md  INTEGRATED_GENERATION.md  INTEGRATION_SUMMARY.md  LITELLM_INTEGRATION_SUMMARY.md  MIGRATION_GUIDE.md  Makefile  PERFORMANCE.md  PLANFILE_GENERATION_SUMMARY.md  README.md  README_EXAMPLES.md  README_OLD.md  README_PACKAGE.md  README_STANDALONE.md  REFACTOR_CLI.md  STRATEGY_SUMMARY.md  TODO.md  analysis-generated.yaml  analyze_files.py  auto_generate_planfile.sh  cleanup_redundant.sh  demo_planfile_usage.py  docker-compose.yml  docker-entrypoint.sh  edits  enhanced-analysis.yaml  enhanced_analyze.py  example_standalone.py  final-planfile.yaml  generate_from_files.py  generate_planfile.py  goal.yaml  integrated-planfile.yaml  (+28 more)
.github/workflows/: ci-auto-loop.yml
.planfile/: config.yaml  github.planfile.yaml
.planfile/sprints/: backlog.yaml  current.yaml
.planfile/sync/: github.state.yaml
.planfile_analysis/: README.md  analysis.toon.yaml  calls.mmd  compact_flow.mmd  context.md  duplication.toon  evolution.toon.yaml  flow.mmd  index.html  map.toon.yaml  project.toon.yaml  prompt.txt  validation.toon.yaml
No code edits required - this appears to be a task list/: issue summary without specific code to fix.
code2llm_output/: README.md  analysis.toon.yaml  context.md
docs/: API.md  ARCHITECTURE_PROPOSAL.md  CI_CD_INTEGRATION.md  CI_CD_INTEGRATION_OLD.md  CLI.md  EXAMPLES.md  README.md
docs/summaries/: AUTOMATED_GENERATION_SUMMARY.md  ENHANCEMENT_COMPLETE.md  EXAMPLES_SUMMARY.md  GENERATE_README.md  IMPROVEMENTS_SUMMARY.md  REFACTORING_SUMMARY.md
examples/: EXAMPLES_REORGANIZATION.md  PROPOSED_API_IMPROVEMENTS.py  README.md  llm-config.yaml  llm_integration_demo.py  llx_validator.py  quick-start.yaml  run.sh  strategy_free_test.yaml  strategy_simple_v2.yaml  test-strategy.yaml  test_all_examples.py  test_litellm_integration.py  test_llm_adapters.py  test_strategies.py
examples/.planfile_analysis/: README.md  analysis.toon.yaml  analysis_summary.json  calls.mmd  compact_flow.mmd  context.md  duplication.toon  evolution.toon.yaml  flow.mmd  index.html  map.toon.yaml  project.toon.yaml  prompt.txt  validation.toon.yaml
examples/advanced-usage/: README.md  advanced_usage_examples.py  ci-strategy.yaml  ci-workflow.sh  final-strategy.yaml  run.sh  security-baseline.yaml
examples/bash-generation/: test_planfile_generation.sh  verify_planfile.sh
examples/checkbox-tickets/: README.md  TODO.md  demo.py  run.sh
examples/cli-commands/: README.md  run.sh  (+3 more)
planfile/: __init__.py  builder.py  ci.py  ci_runner.py  examples.py  execution.py  executor_standalone.py  models.py  models_v2.py  runner.py  server_common.py
planfile_backup_20260326_151546/: __init__.py  executor_v2.py  models.py  models_v2.py  runner.py
project/: README.md  analysis.toon.yaml  calls.mmd  compact_flow.mmd  context.md  duplication.toon.yaml  evolution.toon.yaml  flow.mmd  index.html  map.toon.yaml  project.toon.yaml  prompt.txt  validation.toon.yaml
strategies/: .planfile_analysis
strategy/: __init__.py  ci_runner.py  models.py  runner.py
tests/: llm_adapters.py  test_strategy.py
(+265 files in other folders)
